<resources>
    <string name="app_name">SITS LIVE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fee">Fee</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_transport">Transport</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notices">Notices</string>
    <string name="menu_events">Events</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_teachers">My Teachers</string>
    <string name="menu_homework">Homework</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_academics">Academics</string>
    <string name="menu_school">School Details</string>


    <string name="title_activity_bottom_tab">BottomTab</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_profile">Profile</string>
</resources>
