<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/file_chart"
            android:title="@string/menu_exam" />
        <item
            android:id="@+id/nav_fee"
            android:icon="@drawable/cash_usd"
            android:title="@string/menu_fee" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/bus_school"
            android:title="@string/menu_transport" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/checkbox_marked"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_circle"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@drawable/bulletin_board"
            android:title="@string/menu_notices" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/calendar"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_teachers" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/briefcase"
            android:title="@string/menu_homework" />
    </group>

</menu>
